# leasing-copilot-supabase

./: .gitignore  ASSIGN_LISTINGS_TO_PM.sql  BOOKING_IMPROVEMENTS_SUMMARY.md  CHAT_IDENTIFICATION_FIX.md  CHECK_TRIGGER_AND_LOGS.sql  DEMO_REQUEST_MIGRATION.sql  DIAGNOSE_CONTACT_FORM_EMAIL.sql  Documentation.md  EMAIL_NOTIFICATIONS_SETUP.md  EMAIL_TRIGGERS_SETUP.md  FIX_ALL_COLUMN_NAMES.sql  FIX_CONTACT_FORM_TRIGGER_BODY_TYPE.sql  FIX_CONTACT_FORM_TRIGGER_JSON.sql  FIX_CONTACT_FORM_TRIGGER_JSON_V2.sql  FIX_SOURCE_TABLE_CONSTRAINT.sql  FIX_TRIGGER_BODY_TYPE.sql  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_CONTACT_FORM_INTEGRATION.md  FRONTEND_MAINTENANCE_INTEGRATION.md  LATENCY_OPTIMIZATIONS.md  MAINTENANCE_REQUEST_IMPLEMENTATION.md  MAINTENANCE_REQUEST_TROUBLESHOOTING.md  Makefile  PHONE_NUMBER_ENHANCEMENTS.md  PHONE_NUMBER_REQUEST_UPDATE_MIGRATION.sql  PHONE_NUMBER_SYSTEM_MIGRATION.sql  PRODUCTION_DEPLOYMENT.md  PROPERTY_UPDATE_FIX.md  RAG_BEFORE_AFTER_COMPARISON.md  RAG_DATA_ISOLATION_EXPLANATION.md  RENDER_ENV_CHECKLIST.md  SETUP_CONTACT_FORM.md  SUPABASE_MIGRATION_COMPLETE.sql  TECH_TEAM_PHONE_NUMBER_GUIDE.md  TEST_CONTACT_FORM_TRIGGER.sql  TROUBLESHOOT_CONTACT_FORM_EMAIL.md  UPDATE_ASSISTANT_ID_FOR_LEASING_COPILOT.sql  UPDATE_VAPI_ASSISTANT_IDS.sql  VERTEX_AI_SETUP.md  ZOHO_MAIL_SETUP.md  (+28 more)
DB/: db.py  listing_parser.py  secondary_db.py  sync.py  user_lookup.py  vapi_helpers.py  vertex_ai_client.py
Docs & Readme/: README.md
frontend_example/: BookingManagement.tsx
test_data/: README_TEST_FILES.md  check_listings.sql  check_whatsapp.sql  listings_test.csv  (+9 more)
(+9 files in other folders)
